--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
         <div id="index-banner" class="parallax-container">
             <div class="section no-pad-bot">
                 <div class="container">
-                    <br><br>
-                    <h1 class="header center white-text text-darken-2 nic">What would you like to eat?</h1>
-                    <br><br>
+                    <div class="row">
+                        <div class="col l12 s12 m12 center">
+                            <br><br>
+                            <h1 class="header center white-text text-darken-2 nic">What would you like to eat?</h1>
+                            <br><br>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
@@ -50,8 +55,7 @@
 
             </div>
             <div class="row">
-
-                <div class="col l12 m12 s12">
+                <div class="col l12 m12 s12 mrt20">
                     <div class="container center">
                         <button id="foodD" class="waves-effect waves-light grey dark-1 btn-large" value="food"><i class="material-icons left">local_dining</i>Dine
                             in</button>
